modificacao no rodape

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudos 11</title>
+    <title>Cordel Moderno</title>
 
     <link rel="shortcut icon" href="img/lampada_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/estilo_11.css">
@@ -83,7 +83,7 @@
         </section>
     </main>
     <footer>
-        <a href="pagina10.html" target="_self">Página Anterior</a> -- <a href="pagina12.html" target="_self">Proxima Página</a>
+        <p>Site criado por <a href="https://github.com/GabrielSoardiM" target="_blank">Gabriel Soardi Machado</a></p>
     </footer>
 </body>
 </html>
