--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cordel Moderno</title>
 
     <link rel="shortcut icon" href="img/lampada_icon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/estilo_11.css">
+    <link rel="stylesheet" href="estilos/estilo.css">
 </head>
 <body>
     <header>
